# RustAssignment

./: Cargo.toml  README.md  dept.xls  emp.txt  leave.xlsx  salary.xlsx  summary.txt
src/: arguments.rs  main.rs
