[package]
name = "summary_report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
calamine = { version = "0.18.0" }
chrono = { version = "0.4.19" }